# rinha-de-backend-2026

./: AGENTS.md  Cargo.toml  Dockerfile  docker-compose.yml  info.json  payload.json
haproxy/: haproxy.cfg
nginx/: nginx.conf
src/: decision.rs  index.rs  main.rs  models.rs  search.rs  vectorize.rs
